<resources>
    <string name="app_name">Personal_MVVM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="error_loading">Error loading!</string>
    <string name="animal_name">Animal Name</string>
    <string name="animal_name">Animal Name</string>
    <string name="animal_location">Animal Location</string>
    <string name="animal_lifespan">Animal LifeSpan</string>
    <string name="animal_diet">Animal Diet</string>
    <string name="animal_image">Animal Image</string>
</resources>
