<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_animal_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:minHeight="200dp"
        android:contentDescription="@string/animal_image"
        />

    <TextView
        android:id="@+id/tv_animal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:layout_margin="8dp"
        android:text="@string/animal_name" />

    <TextView
        android:id="@+id/tv_animal_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text"
        android:layout_margin="8dp"
        android:text="@string/animal_location" />

    <TextView
        android:id="@+id/tv_animal_lifeSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text"
        android:layout_margin="8dp"
        android:text="@string/animal_lifespan" />

    <TextView
        android:id="@+id/tv_animal_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:layout_margin="8dp"
        android:text="@string/animal_diet" />


</LinearLayout>